--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.0  
+  shared_preferences: ^2.5.3
+  mobile_scanner: ^3.5.2
+  dropdown_search: ^5.0.6
+  intl: ^0.17.0
+  flutter_pdfview: ^1.0.0
+  path_provider: ^2.0.15
+  provider: ^6.1.3
+  open_file: ^3.0.3
+  share_plus: ^7.2.1
+  permission_handler: ^11.0.1
+  math_expressions: ^2.2.0
+  device_info_plus: ^10.0.0
+  excel: ^2.1.0
+  printing: ^5.12.0
+  pdf: ^3.10.4
+  dio: ^5.0.0
+  flutter_searchable_dropdown: ^2.0.0  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,9 +76,30 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   
+    - assets/images/stock.png
+    - assets/images/orderbooking.png
+    - assets/images/catalog.png
+    - assets/images/home.png
+    - assets/images/background.jpg
+    - assets/images/background.png
+    - assets/images/new_logo.png
+    - assets/images/logo.png
+    - assets/images/barcode.png
+    - assets/garments/image_01.png
+    - assets/garments/image_02.png
+    - assets/garments/image_03.png
+    - assets/garments/image_04.png
+    - assets/garments/image_05.png
+    - assets/garments/image_06.png
+    - assets/garments/image_07.png
+    - assets/garments/image_08.png
+    - assets/garments/image_09.png
+    - assets/garments/image_10.png
+    - assets/garments/image_11.png
+    - assets/garments/image_12.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
