--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   pdf: ^3.10.4
   dio: ^5.0.0
   flutter_searchable_dropdown: ^2.0.0  
+  multi_select_flutter: ^4.0.0
+  persistent_bottom_nav_bar: ^5.0.0
+  carousel_slider: ^5.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
