--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   multi_select_flutter: ^4.0.0
   persistent_bottom_nav_bar: ^5.0.0
   carousel_slider: ^5.0.0
+  photo_view: ^0.13.0
+  photo_view_platform_interface: ^0.13.0
 
 
 
