--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - assets/images/new_logo.png
     - assets/images/logo.png
     - assets/images/garment.png
+    - assets/images/default.png
     - assets/images/barcode.png
     - assets/garments/image_01.png
     - assets/garments/image_02.png
