--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
-        android:label="vrs_erp_figma"
+        android:label="VRSERP APP"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
