--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   auto_size_text: ^3.0.0
   getwidget: ^2.0.4
   installed_apps: ^1.6.0
-  
+  google_fonts: ^4.0.4
  # android_intent_plus: ^4.0.2
   #device_apps: ^2.2.0
 
