share as a link option added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,12 @@ dependencies:
   carousel_slider: ^5.0.0
   auto_size_text: ^3.0.0
   getwidget: ^2.0.4
+  qr_flutter: ^4.1.0
   # installed_apps: ^1.6.0
   google_fonts: ^4.0.4
  # android_intent_plus: ^4.0.2
   #device_apps: ^2.2.0
+
 
 
 
