--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,7 @@
 .history
 .svn/
 .swiftpm/
-.linux/
-.windows/
-.macos/
+
 migrate_working_dir/
 
 # IntelliJ related
@@ -35,6 +33,9 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/linux/
+/windows/
+/macos/
 
 # Symbolication related
 app.*.symbols
