--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,6 +121,7 @@ flutter:
     - assets/images/report.png
     - assets/images/dashboard.png
     - assets/images/setting.png
+    - assets/images/team.png
     - assets/images/deleteAccount.png
     - assets/garments/image_01.png
     - assets/garments/image_02.png
