view and download functionality done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   url_launcher: ^6.3.0
   # installed_apps: ^1.6.0
   google_fonts: ^4.0.4
+  pdfx: 2.9.1
  # android_intent_plus: ^4.0.2
   #device_apps: ^2.2.0
 
