--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,62 +1,25 @@
-name: iOS CI/CD Pipeline
+name: Flutter iOS Build Check
 
 on:
   push:
     branches:
-      - main  # Run on push to main branch
+      - main
 
 jobs:
-  build:
-    runs-on: macos-latest  # Required for iOS builds
+  build_ios:
+    runs-on: macos-latest
 
     steps:
-      - name: Checkout the code
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # Change to your Flutter version
+          flutter-version: 'stable'  # or specify your Flutter version
 
-      - name: Install Flutter dependencies
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Set up Ruby (for CocoaPods)
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-
-      - name: Install CocoaPods (if Podfile exists)
-        run: |
-          if [ -f ios/Podfile ]; then
-            cd ios
-            pod install
-          else
-            echo "No Podfile found. Skipping pod install."
-          fi
-
-      - name: Set up Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_15.2.app
-
-      - name: Build the iOS app
-        run: |
-          flutter build ios --release --no-codesign
-
-      - name: Archive and export IPA
-        run: |
-          xcodebuild -workspace ios/Runner.xcworkspace \
-                     -scheme Runner \
-                     -sdk iphoneos \
-                     -configuration Release \
-                     -archivePath $PWD/build/Runner.xcarchive archive
-
-          xcodebuild -exportArchive \
-                     -archivePath $PWD/build/Runner.xcarchive \
-                     -exportOptionsPlist ios/ExportOptions.plist \
-                     -exportPath $PWD/build
-
-      - name: Upload IPA artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: iOS-App
-          path: build/*.ipa
+      - name: Build iOS (unsigned)
+        run: flutter build ios --no-codesign
