--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   # installed_apps: ^1.6.0
   google_fonts: ^4.0.4
   pdfx: 2.9.1
+  multicast_dns: ^0.3.3
  # android_intent_plus: ^4.0.2
   #device_apps: ^2.2.0
 
