--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   google_fonts: ^4.0.4
   pdfx: 2.9.1
   multicast_dns: ^0.3.3
+  badges: ^3.1.2
+
  # android_intent_plus: ^4.0.2
   #device_apps: ^2.2.0
 
